--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "fs-extra": "^7.0.0",
+    "node-dir": "^0.1.17",
     "pg": "^7.4.3"
   }
 }
