--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "body-parser": "^1.18.3",
+    "color-convert": "^1.9.3",
     "cors": "^2.8.4",
     "esm": "^3.0.82",
     "express": "^4.16.3",
