--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "esm": "^3.0.82",
     "express": "^4.16.3",
     "fs-extra": "^7.0.0",
+    "getenv": "^0.7.0",
     "node-dir": "^0.1.17",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "promise-limit": "^2.7.0"
   }
 }
