--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.3",
     "color": "^3.0.0",
     "cors": "^2.8.4",
+    "csv-stringify": "^4.3.1",
     "esm": "^3.0.82",
     "express": "^4.16.3",
     "fs-extra": "^7.0.0",
