Backend authentication; first generation only.

--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "body-parser": "^1.18.3",
     "color": "^3.0.0",
     "compression": "^1.7.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "csv-stringify": "^4.3.1",
     "esm": "^3.0.82",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "fs-extra": "^7.0.0",
     "getenv": "^0.7.0",
     "node-dir": "^0.1.17",
     "node-fetch": "^2.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.3",
     "promise-limit": "^2.7.0"
   }
