Add general purpose values support to each object.  Timestamps don't work fully yet.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "fs-extra": "^7.0.0",
+    "geojson-validation": "^0.2.1",
     "getenv": "^0.7.0",
+    "lodash-es": "^4.17.11",
     "node-dir": "^0.1.17",
     "node-fetch": "^2.3.0",
     "passport": "^0.4.0",
